--- a/wiki/build.wiki
+++ b/wiki/build.wiki
@@ -1,19 +1,6 @@
 #labels build
-MTS build
-
-= Introduction =
-
--> Go to downloaded directory
--> Change "imsloader.release.version" value in build.properties file
--> Launch ant (if ant isn't installed on your system you can find a        distribution in 3pp directory)
+* Go to downloaded directory
+* Change "imsloader.release.version" value in build.properties file
+* Launch ant (if ant isn't installed on your system you can find a        distribution in 3pp directory)
 
 Now you can find an installer in dist directory. Enjoy it.
-
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
