Edited wiki page build_maven through web user interface.

--- a/wiki/build_maven.wiki
+++ b/wiki/build_maven.wiki
@@ -11,7 +11,7 @@ Please configure maven according to your proxy if you have one.
 = How to build =
 
 You should use the following goals only:
-  * clean _cleans the _target_ directory_
+  * clean _cleans the target directory_
   * package _will generate the *target/mts directory* (you can run mts from there)_
   * install _will generate *target/mts-VERSION-STANDARD.jar* (iz pack installer)_
 
