Edited wiki page Downloads through web user interface.

--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -1,13 +1,10 @@
-#summary One-sentence summary of this page.
+#summary Downloads for MTS
 
-= Introduction =
+= Public link to downloads =
 
-Add your content here.
+https://drive.google.com/folderview?id=0B-jG7kH6o14_V2dmNVJ6SF9BVVU&usp=sharing#list
 
 
-= Details =
+= Private link for uploaders (if authorized) =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+https://drive.google.com/?usp=folder&authuser=0#folders/0B-jG7kH6o14_V2dmNVJ6SF9BVVU
