Edited wiki page Downloads through web user interface.

--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -1,8 +1,9 @@
 #summary Downloads for MTS
 
-= Public link to downloads =
+= Public downloads =
 
-https://drive.google.com/folderview?id=0B-jG7kH6o14_V2dmNVJ6SF9BVVU&usp=sharing#list
+You are able to download the last quick-start document, the last release-notes and the binary archive for installation using the following link :
+https://drive.google.com/folderview?id=0B jG7kH6o14_V2dmNVJ6SF9BVVU&usp=sharing#list
 
 
 = Private link for uploaders (if authorized) =
